Fix entity registration statement overflow

--- a/app/public/styles/error.css
+++ b/app/public/styles/error.css
@@ -1283,6 +1283,7 @@ body.has-alert .alert-root {
   font-weight: 200;
   font-size: 13px;
   line-height: 21px;
+  white-space: wrap;
 }
 .affiliated-items table td.cell-type {
   padding: 0;
