--- a/app/public/styles/main.css
+++ b/app/public/styles/main.css
@@ -1874,6 +1874,7 @@ body.has-alert .alert-root {
   font-weight: 200;
   font-size: 13px;
   line-height: 21px;
+  white-space: wrap;
 }
 .affiliated-items table td.cell-type {
   padding: 0;
