--- a/assets/styles/items/_affiliated.scss
+++ b/assets/styles/items/_affiliated.scss
@@ -22,6 +22,7 @@
             font-weight: 200;
             font-size: 13px;
             line-height: 21px;
+            white-space: wrap;
           }
         }
       }
